db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  namespace: ns
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: db
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db-cont
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: ns
spec:
  selector:
    app: db
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
